@@ -11,7 +11,7 @@ use DateTime::Duration;
 use Data::Dumper;
 
 
-use Test::More tests => 63;
+use Test::More tests => 71;
 eval { no warnings; require Test::LongString; Test::LongString->import(max => 100); $Test::LongString::Context=50; };
 if ( $@ ) { no strict 'refs'; *{'main::is_string'}=\&main::is; }
 
@@ -67,6 +67,18 @@ is($drd->{info}->{host_check_limit},5,'donuts: host_check_limit');
 is($dri->info('contact_check_limit'),5,'donuts: contact_check_limit');
 is($drd->{info}->{domain_check_limit},5,'donuts: domain_check_limit');
 
+# Afilias
+$rc = $dri->add_registry('NGTLD',{provider => 'afilias'});
+is($rc->{last_registry},'afilias','afilias add_registry');
+$rc = $dri->target('afilias')->add_current_profile('p1-afilias','epp',{f_send=>\&mysend,f_recv=>\&myrecv});
+$drd = $dri->{registries}->{afilias}->{driver};
+is_deeply( [$drd->transport_protocol_default('epp')],['Net::DRI::Transport::Socket',{},'Net::DRI::Protocol::EPP::Extensions::AfiliasSRS',{}],'afilias: epp transport_protocol_default');
+is_deeply( $dri->protocol()->{loaded_modules},[@core_modules, map { 'Net::DRI::Protocol::EPP::Extensions::'.$_ } qw/GracePeriod SecDNS LaunchPhase Afilias::IPR Afilias::IDNLanguage Afilias::Message Afilias::Registrar Afilias::Price Afilias::JSONMessage/],'afilias: loaded_modules');
+is($drd->{bep}->{bep_type},2,'aflias: bep_type');
+is($drd->{info}->{check_limit},13,'afilias: check_limit');
+is($drd->{info}->{host_check_limit},13,'afilias: host_check_limit');
+is($dri->info('contact_check_limit'),13,'afilias: contact_check_limit');
+is($drd->{info}->{domain_check_limit},13,'afilias: domain_check_limit');
 
 #### Dedicated Registry
 # Neustar (Buzz)
